bugfix: fixed dashboard calculations (total cost, total sales, and profit/loss) and redirecting to dashboard not working bug